objects/Opportunity.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <businessProcesses>
        <fullName>Sales process</fullName>
        <description>Created to set up record types</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Fishing Hole</fullName>
        </values>
        <values>
            <fullName>Closed - Invalid</fullName>
        </values>
        <values>
            <fullName>Closed - Lost</fullName>
        </values>
        <values>
            <fullName>Closed - Won</fullName>
        </values>
        <values>
            <fullName>Contract Out</fullName>
        </values>
        <values>
            <fullName>Demo %2F Proposal %2F Evaluation</fullName>
        </values>
        <values>
            <fullName>Discovery %2F RFX</fullName>
        </values>
        <values>
            <fullName>Prospect Interested %2F SDR Engaged %2F Qualifying</fullName>
        </values>
        <values>
            <fullName>Sales Rep Accepted %26 Introduced</fullName>
        </values>
        <values>
            <fullName>VOC %2F Verbal</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>RFP__c</fullName>
        <label>RFP?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>With RFP</fullName>
                </value>
                <value>
                    <fullName>Without RFP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <inlineHelpText>How is this item being billed? Attached to the trx or as a separate item?</inlineHelpText>
        <label>Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transaction</fullName>
                </value>
                <value>
                    <fullName>Flat Fee</fullName>
                </value>
                <value>
                    <fullName>Gain Share</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>With_RFP__c</fullName>
        <label>With RFP?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Formal RFP + Pricing</fullName>
                </value>
                <value>
                    <fullName>Formal RFP Response</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Pricing Only</fullName>
                </value>
                <value>
                    <fullName>Proposal + Pricing</fullName>
                </value>
                <value>
                    <fullName>Proposal Only</fullName>
                </value>
                <value>
                    <fullName>RFI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEGACY_ID__c</fullName>
        <externalId>true</externalId>
        <label>LEGACY_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_AE__c</fullName>
        <label>Meeting AE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ops_Region__c</fullName>
        <label>Ops Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Canada East</fullName>
                </value>
                <value>
                    <fullName>Canada West</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>U.S. Corp HQ</fullName>
                </value>
                <value>
                    <fullName>Avenir</fullName>
                </value>
                <value>
                    <fullName>Global Strategic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <formula>ABS( CloseDate -  Est_Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatically calculates the number of days from when an Opportunity is marked Closed Won to the number of days to the Estimated Start Date. This is a locked field and can&apos;t be edited.</inlineHelpText>
        <label>Closed Date-Est Start Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Global Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NORAM_Total__c</fullName>
        <description>Formula field to caculate the NORAM Amount for New Business or Global Opportunitity Types.  Existing &amp; Meetings will appear as 0</description>
        <formula>CASE(
        RecordType.Name, 
       &apos;Sales - New Business&apos;, 
        Amount, 
       &apos;Global Business&apos;, 
        U_S_Air_Volume__c + Canadian_Air_Volume__c,
        0
      )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NORAM Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <description>Custom field to track salespersons gut feeling on a win - Legacy info</description>
        <inlineHelpText>Salesperson&apos;s gut feeling; likelihood of win</inlineHelpText>
        <label>Probability % Legacy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>25%</fullName>
                </value>
                <value>
                    <fullName>33%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>75%</fullName>
                </value>
                <value>
                    <fullName>90%</fullName>
                </value>
                <value>
                    <fullName>95%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>You must add the contact name of the person who the Opportunity is with.</inlineHelpText>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting_Date__c</fullName>
        <label>Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <defaultValue>CASE($User.Region__c,
&quot;West&quot;, &quot;West&quot;,
&quot;East&quot;, &quot;East&quot;,
&quot;Central&quot;, &quot;Central&quot;,
&quot;Corp HQ&quot;,&quot;U.S. Corp HQ&quot;,
&quot;Canada East&quot;,&quot;Canada East&quot;,
&quot;Canada West&quot;, &quot;Canada West&quot;,
null)</defaultValue>
        <inlineHelpText>Please choose the region you roll up to.</inlineHelpText>
        <label>Sales Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Mid Market</fullName>
                </value>
                <value>
                    <fullName>Strategic Named Accounts</fullName>
                </value>
                <value>
                    <fullName>Avenir</fullName>
                    <isActive>false</isActive>
                    <label>Avenir</label>
                </value>
                <value>
                    <fullName>Canada East</fullName>
                    <isActive>false</isActive>
                    <label>Canada East</label>
                </value>
                <value>
                    <fullName>Canada West</fullName>
                    <isActive>false</isActive>
                    <label>Canada West</label>
                </value>
                <value>
                    <fullName>Central</fullName>
                    <isActive>false</isActive>
                    <label>Central</label>
                </value>
                <value>
                    <fullName>Central Region</fullName>
                    <isActive>false</isActive>
                    <label>Central Region</label>
                </value>
                <value>
                    <fullName>East</fullName>
                    <isActive>false</isActive>
                    <label>East</label>
                </value>
                <value>
                    <fullName>East Region</fullName>
                    <isActive>false</isActive>
                    <label>East Region</label>
                </value>
                <value>
                    <fullName>Global Strategic</fullName>
                    <isActive>false</isActive>
                    <label>Global Strategic</label>
                </value>
                <value>
                    <fullName>U.S. Corp HQ</fullName>
                    <isActive>false</isActive>
                    <label>U.S. Corp HQ</label>
                </value>
                <value>
                    <fullName>U.S. Corporate HQ</fullName>
                    <isActive>false</isActive>
                    <label>U.S. Corporate HQ</label>
                </value>
                <value>
                    <fullName>West</fullName>
                    <isActive>false</isActive>
                    <label>West</label>
                </value>
                <value>
                    <fullName>West Region</fullName>
                    <isActive>false</isActive>
                    <label>West Region</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TMCs_Bidding__c</fullName>
        <description>Enter the one or two digit number of TOTAL NUMBER of TMCs bidding on this opportunity. For example, if we’re the only company proposing simply enter 1. If you don’t know, enter UNKNOWN.</description>
        <inlineHelpText>Enter the one or two digit number of TOTAL NUMBER of TMC&apos;s Bidding including us -- or type UNKNOWN.</inlineHelpText>
        <label>TMCs Bidding</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel_Staff__c</fullName>
        <label>Travel Staff</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Onsite TD</fullName>
                </value>
                <value>
                    <fullName>Amanda Card</fullName>
                </value>
                <value>
                    <fullName>Amy Nunez</fullName>
                </value>
                <value>
                    <fullName>Anna Hughes</fullName>
                </value>
                <value>
                    <fullName>Anna LaVenture</fullName>
                </value>
                <value>
                    <fullName>Anne Marie Rogers</fullName>
                </value>
                <value>
                    <fullName>Barry Salvi</fullName>
                </value>
                <value>
                    <fullName>Bethany Courchene</fullName>
                </value>
                <value>
                    <fullName>Bette Zicchino</fullName>
                </value>
                <value>
                    <fullName>Chris Taylor</fullName>
                </value>
                <value>
                    <fullName>Elaine Guy</fullName>
                </value>
                <value>
                    <fullName>Emily Dunn</fullName>
                </value>
                <value>
                    <fullName>Gabrielle Martinez</fullName>
                </value>
                <value>
                    <fullName>Hanna Wardlow</fullName>
                </value>
                <value>
                    <fullName>Heather Miller</fullName>
                </value>
                <value>
                    <fullName>Janice Scalia</fullName>
                </value>
                <value>
                    <fullName>Jenna Turner</fullName>
                </value>
                <value>
                    <fullName>Jim Lowery</fullName>
                </value>
                <value>
                    <fullName>Jodi Marschhauser</fullName>
                </value>
                <value>
                    <fullName>Julie Hinkle</fullName>
                </value>
                <value>
                    <fullName>Kari Isaacson</fullName>
                </value>
                <value>
                    <fullName>Laura Iacono</fullName>
                </value>
                <value>
                    <fullName>Lindsey Davis</fullName>
                </value>
                <value>
                    <fullName>Liz McCormick</fullName>
                </value>
                <value>
                    <fullName>Madison Cyr</fullName>
                </value>
                <value>
                    <fullName>Mary Bailey</fullName>
                </value>
                <value>
                    <fullName>Patrick Craven</fullName>
                </value>
                <value>
                    <fullName>Sarah French</fullName>
                </value>
                <value>
                    <fullName>Stacey Perez</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Verbal_Award__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate if a verbal award has been given</description>
        <inlineHelpText>Has a verbal award been given for this Opportunity?  If so, please check this box</inlineHelpText>
        <label>Verbal Award</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Countries__c</fullName>
        <inlineHelpText>Enter in the total # of Countries in scope of this specific bid/opportunity.</inlineHelpText>
        <label># of Countries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Competitor__c</fullName>
        <inlineHelpText>Aside from the incumbent, who is our biggest competitor and how do we best compete?</inlineHelpText>
        <label>CB Competitor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cross_Selling__c</fullName>
        <label>Cross-Selling</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ATPI</fullName>
                </value>
                <value>
                    <fullName>Direct Travel</fullName>
                </value>
                <value>
                    <fullName>Creative Group</fullName>
                </value>
                <value>
                    <fullName>Vision Canada</fullName>
                    <isActive>false</isActive>
                    <label>Vision Canada</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incumbent_TMC__c</fullName>
        <label>Incumbent TMC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AAA</fullName>
                </value>
                <value>
                    <fullName>Abacus</fullName>
                </value>
                <value>
                    <fullName>Abbey Travel</fullName>
                </value>
                <value>
                    <fullName>Able Travel</fullName>
                </value>
                <value>
                    <fullName>Accord</fullName>
                </value>
                <value>
                    <fullName>Account will not disclose</fullName>
                </value>
                <value>
                    <fullName>Action Travel</fullName>
                </value>
                <value>
                    <fullName>Adelman Travel</fullName>
                </value>
                <value>
                    <fullName>ADTRAV</fullName>
                </value>
                <value>
                    <fullName>Advanced Travel</fullName>
                </value>
                <value>
                    <fullName>AJA Stanmore</fullName>
                </value>
                <value>
                    <fullName>Alba Travel</fullName>
                </value>
                <value>
                    <fullName>Alexander Travel</fullName>
                </value>
                <value>
                    <fullName>All About Travel</fullName>
                </value>
                <value>
                    <fullName>All Points Travel</fullName>
                </value>
                <value>
                    <fullName>Allstar Travel Group (ATG)</fullName>
                </value>
                <value>
                    <fullName>Altour</fullName>
                </value>
                <value>
                    <fullName>American Express Global Travel</fullName>
                </value>
                <value>
                    <fullName>American Travel Planners</fullName>
                </value>
                <value>
                    <fullName>AMJ Getaways</fullName>
                </value>
                <value>
                    <fullName>AmTrav</fullName>
                </value>
                <value>
                    <fullName>Ancor Travel and Tours</fullName>
                </value>
                <value>
                    <fullName>Anderson Travel</fullName>
                </value>
                <value>
                    <fullName>Angora</fullName>
                </value>
                <value>
                    <fullName>Anthony Travel</fullName>
                </value>
                <value>
                    <fullName>Apollo Travel</fullName>
                </value>
                <value>
                    <fullName>Aquarius</fullName>
                </value>
                <value>
                    <fullName>Aries Travel</fullName>
                </value>
                <value>
                    <fullName>Ascendas</fullName>
                </value>
                <value>
                    <fullName>Associated Travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>M_I_Potential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>M&amp;I Potential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annualized_Air__c</fullName>
        <label>Annualized Air</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bid_Components__c</fullName>
        <inlineHelpText>Select all items that were part of this opportunity.</inlineHelpText>
        <label>Bid Components</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Custom Presentation</fullName>
                </value>
                <value>
                    <fullName>Custom Proposal</fullName>
                </value>
                <value>
                    <fullName>Data Security Questionnaire #1 (RFI/RFP)</fullName>
                </value>
                <value>
                    <fullName>Data Security Questionnaire #2 (Contract)</fullName>
                </value>
                <value>
                    <fullName>Due Diligence or Pre-RFI Questionnaire (Non-IT)</fullName>
                </value>
                <value>
                    <fullName>GLOBAL Request for Information/Rebid (Global RFI/Rebid)</fullName>
                </value>
                <value>
                    <fullName>GLOBAL Request for Information (RFI)</fullName>
                </value>
                <value>
                    <fullName>GLOBAL Request for Proposal/Rebid (Global RFP/Rebid)</fullName>
                </value>
                <value>
                    <fullName>GLOBAL Request for Proposal (RFP)</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Pricing Only</fullName>
                </value>
                <value>
                    <fullName>Proposal Clarifications</fullName>
                </value>
                <value>
                    <fullName>Request for Information/Rebid (RFI/Rebid)</fullName>
                </value>
                <value>
                    <fullName>Request for Information (RFI)</fullName>
                </value>
                <value>
                    <fullName>Request for Proposal/Rebid (RFP/Rebid)</fullName>
                </value>
                <value>
                    <fullName>Request for Proposal (RFP)</fullName>
                </value>
                <value>
                    <fullName>Small Market Proposal</fullName>
                </value>
                <value>
                    <fullName>Standard Presentation</fullName>
                </value>
                <value>
                    <fullName>Vendor Questionnaire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Est_Start_Date__c</fullName>
        <inlineHelpText>This is the date the Salesperson and new Customer desire as implemented and transacting. Required field at Stage = Contract Out.</inlineHelpText>
        <label>Est Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Global_Partner__c</fullName>
        <label>Global Partner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ATPI</fullName>
                </value>
                <value>
                    <fullName>Chambers</fullName>
                </value>
                <value>
                    <fullName>Colpitts UK</fullName>
                </value>
                <value>
                    <fullName>CTM</fullName>
                </value>
                <value>
                    <fullName>Direct Travel</fullName>
                </value>
                <value>
                    <fullName>Globalstar</fullName>
                </value>
                <value>
                    <fullName>Hillgate</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>List_Countries__c</fullName>
        <description>Algeria 
Angola 
Argentina 
Australia 
Austria 
Azerbaijan 
Belgium 
Brazil 
Canada 
Chile 
China 
Colombia 
Cyprus 
Czech Republic 
Denmark 
Finland 
France 
Germany 
Greece 
Hong Kong 
Hungary
India 
Indonesia 
Ireland 
Israel
Italy 
Japan 
Kazakhstan 
Kenya 
Kuwait 
Latvia 
Lichtenstein
Malaysia 
Mexico 
New Zealand 
Nigeria 
Norway 
Oman 
Pakistan 
Peru 
Philippines 
Poland 
Portugal 
Rep. of Congo
Romania 
Russia 
Saudi Arabia 
Singapore 
South Africa 
South Korea 
Spain 
Sweden 
Switzerland 
Taiwan 
Thailand 
The Netherlands 
Turkey 
Ukraine 
United Arab Emirates 
United Kingdom 
USA</description>
        <inlineHelpText>Please select the countries in the global bid</inlineHelpText>
        <label>List Countries</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Bosnia &amp; Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cuba</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>El Salvador</fullName>
                </value>
                <value>
                    <fullName>England</fullName>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_of_PAX__c</fullName>
        <label>Meeting # of PAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oppty_Holdover__c</fullName>
        <label>Oppty Holdover</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Q1 2025</fullName>
                </value>
                <value>
                    <fullName>CY 2025</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Lead_1__c</fullName>
        <label>Project Lead 1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alisa Regnier</fullName>
                    <isActive>false</isActive>
                    <label>Alisa Regnier</label>
                </value>
                <value>
                    <fullName>Alison Pappas</fullName>
                    <isActive>false</isActive>
                    <label>Alison Pappas</label>
                </value>
                <value>
                    <fullName>Amanda Wesley</fullName>
                </value>
                <value>
                    <fullName>Brady Sadler</fullName>
                    <isActive>false</isActive>
                    <label>Brady Sadler</label>
                </value>
                <value>
                    <fullName>Debra Richardson</fullName>
                    <isActive>false</isActive>
                    <label>Debra Richardson</label>
                </value>
                <value>
                    <fullName>Jane Delson</fullName>
                    <isActive>false</isActive>
                    <label>Jane Delson</label>
                </value>
                <value>
                    <fullName>Kacy Kish</fullName>
                    <isActive>false</isActive>
                    <label>Kacy Kish</label>
                </value>
                <value>
                    <fullName>Karen Kermet</fullName>
                    <isActive>false</isActive>
                    <label>Karen Kermet</label>
                </value>
                <value>
                    <fullName>Laura Nelson</fullName>
                    <isActive>false</isActive>
                    <label>Laura Nelson</label>
                </value>
                <value>
                    <fullName>Letty Fong</fullName>
                    <isActive>false</isActive>
                    <label>Letty Fong</label>
                </value>
                <value>
                    <fullName>Lisa Bellis</fullName>
                </value>
                <value>
                    <fullName>Mary Menke</fullName>
                    <isActive>false</isActive>
                    <label>Mary Menke</label>
                </value>
                <value>
                    <fullName>Mary Ramirez</fullName>
                    <isActive>false</isActive>
                    <label>Mary Ramirez</label>
                </value>
                <value>
                    <fullName>Megan Esau</fullName>
                    <label>Megan Tuffey</label>
                </value>
                <value>
                    <fullName>Michelle Hylton</fullName>
                </value>
                <value>
                    <fullName>Michelle Leight</fullName>
                    <isActive>false</isActive>
                    <label>Michelle Leight</label>
                </value>
                <value>
                    <fullName>Richard Russo</fullName>
                    <isActive>false</isActive>
                    <label>Richard Russo</label>
                </value>
                <value>
                    <fullName>Ronald Stranix</fullName>
                </value>
                <value>
                    <fullName>Sonja Lyons</fullName>
                    <isActive>false</isActive>
                    <label>Sonja Lyons</label>
                </value>
                <value>
                    <fullName>Stephanie Hill</fullName>
                    <isActive>false</isActive>
                    <label>Stephanie Hill</label>
                </value>
                <value>
                    <fullName>Taylor Nickerson</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>